--- a/app_web/css/cdk.css
+++ b/app_web/css/cdk.css
@@ -37,20 +37,31 @@ body{
 	box-sizing:border-box;
 	margin-top:60px;
 }
+
+
+
 #convert{
 	width:100%;
-	height:140px;
 	margin:0 auto;
+	overflow:hidden;
 }
 #convert>div:first-child{
 	text-align:center;
 	color:#909090;
 	font-size:24px;
 }
-#convert>form{
+
+#cdk-form{
 	display:block;
 }
-#convert>form>input{
+#cdk-form label{
+	float:left;
+	width:18%;
+	height:35px;
+	line-height:35px;
+	color:#909090;
+}
+#cdk-form div{
 	width:100%;
 	height:35px;
 	display:block;
@@ -59,6 +70,18 @@ body{
 	padding-left:10px;
 	color:#505050;
 	box-sizing:border-box;
+}
+#cdk-form div input{
+	width:82%;
+	border:0px solid #fff;
+	border-bottom:1px solid #ccc;
+	height:35px;
+	color:#767676;
+}
+
+/* 清除谷歌input自带样式 */
+#cdk-form div input:focus{
+	outline:none;
 }
 #convert>a{
 	text-decoration:none;
@@ -71,7 +94,7 @@ body{
 	background-color:#1BA9F2;
 	color:white;
 	border-radius:3px;
-	margin-top:10px;
+	margin-top:20px;
 	opacity:0.8;
 }
 #convert>a:active{
